--- a/gdarius/index.html
+++ b/gdarius/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <title>G-Darius Test</title>
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
+	
+	<style type="text/css"> 
+
+	@font-face {
+    font-family: "digital";
+    src: url("font/digital-7.ttf") format("truetype");
+	}
+	</style> 
+	
   </head>
   <body>
 	<img src="images/logo.png" alt="Portada de G-Darius" id="logo">
