--- a/gdarius/index.html
+++ b/gdarius/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>G-Darius Test</title>
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" href="icon.png">
 	
 	<style type="text/css"> 
 
