--- a/darius-saga/index.html
+++ b/darius-saga/index.html
@@ -17,11 +17,46 @@
   </head>
   <body>
 	<img src="images/portada-saga.jpg" alt="Portada del primer darius" id="logo">
-	<h1>"You will see the creation of new lives"</h1>
-	<p>G-Darius (G Daraiasu) es un videojuego de genero matamarcianos de la compania Taito publicado originalmente como arcade en junio de 1997, apareciendo en septiembre una revision denominada "ver.2". Es el sexto juego y el cuarto arcade de la serie Darius, precuela del primer juego del mismo nombre, y es la primera entrega de la serie en presentar graficos poligonales en 3D.</p>
+	<h1>"Ingenieria de alto impacto" con "Presentacion creativa"</h1>
+	<p>Darius es una franquicia de videojuegos de disparos desarrollada y publicada por Taito. El primer juego del mismo nombre se lanzo en febrero de 1987 para salas de juegos, 
+	y desde entonces ha sido seguido por seis secuelas y varios derivados. La serie tiene lugar durante los eventos de una guerra entre humanos y el imperio de Belsar. 
+	, que conspiran para destruir todo lo que queda de la humanidad. Darius es conocido por sus caminos ramificados en el escenario, su alegre banda sonora y sus enemigos inspirados en la vida marina.</p>
 	<img src="images/banner-h.jpg" alt="Banner de G-Darius" id="banner-h">
-	<h2>Argumento</h2>
-	<p>G-Darius es una historia previa que gira en torno a un conflicto entre los humanoides de Amnelia y los biovasos cyborg / quimera conocidos como "Thiima" (que significa simplemente "liberador de la muerte"). El Thiima se habia despertado por el uso del arma por parte del ejercito de Amnelia A.N. (All-Nothing) para aniquilar al mundo Blazar, con quien Amnelia habia estado en guerra por la jurisdiccion sobre la luna Mahsah. Decididos a proteger su existencia, y hace mucho tiempo programados para proteger el universo de amenazas como A.N., los Thiima pululaban en Amnelia. Aunque las fuerzas armadas fueron devastadas, los cientificos e ingenieros de Amnelia pudieron hacer uso de ambos A.N. y tecnologia de ingenieria inversa / sistemas de vida Thiiman para crear los cazas Silver Hawk. Finalmente, dos pilotos, Sameluck Raida y Lutia Feen, son elegidos para realizar un ataque decisivo en la base principal de Thiima: Kazumn, un satelite del planeta Darius.</p>
-
+	<h2>Desarrollo</h2>
+	<p>La serie aparecio por primera vez en los centros de juego japoneses en 1987, donde Darius se hizo conocido por su configuracion de maquina arcade de pantalla triple "colosal" 
+	y sus asientos sonicos corporales. Fue conocido como el primer juego de arcade en combinar "ingeniería de alto impacto" con "presentacion creativa". En comparacion con la tecnologia de Ultra Panavision 
+	70 en la forma en que la serie utilizo el color, también uso un formato de etapa de ramificacion "innovador" que permitio que multiples partidas fueran diferentes en formas importantes. La serie tambien 
+	es conocida por sus bonitos graficos, su animada banda sonora y sus efectos de sonido.</p>
+	
+	<p>El uso de la serie de peces roboticos, crustaceos y otras criaturas marinas como enemigos se cito como una forma de hacer que los juegos se destaquen debido a la proliferacion de juegos de disparos 
+	arcade de ciencia ficción a mediados de la decada de 1980.</p>
+	
+	<h2>Lista de videojuegos</h2>
+	<h3>Lanzamientos de arcade</h3>
+	
+	<ul>
+	<li>Darius (1987)</li>
+	<li>Darius II (1989)</li>
+	<li>Darius Gaiden (1994)</li>
+	<li>G-Darius (1997)</li>
+	<li>Dariusburst Another Chronicle (2010)</li>
+	</ul>
+	
+	<h3>Lanzamientos para consola</h3>
+	<ul>
+	<li>Darius Twin (1991)</li>
+	<li>Darius Force (1993)</li>
+	<li>Dariusburst (2009)</li>
+	</ul>
+	<h3>Juegos relacionados</h3>
+	<ul>
+	<li>Syvalion (1988)</li>
+	<li>Metal Black (1991)</li>
+	<li>Border Down (2003)</li>
+	</ul>
+	
+	<h4>Creditos</h4>
+	<p>Gran parte de la informacion aqui expuesta ha sido tomada de <a href=https://en.wikipedia.org/wiki/Darius_(series) target=_blank>Wikipedia</a></p>
+	
   </body>
 </html>
