--- a/darius-saga/darius.html
+++ b/darius-saga/darius.html
@@ -18,7 +18,7 @@
   <body>
 	<img src="images/darius-portada.jpg" alt="Portada del primer darius" id="logo">
 	
-	<h1>"Ingenieria de alto impacto" con "Presentacion creativa"</h1>
+	<h1>"Donde el conflicto comienza"</h1>
 	<p>Darius es un juego arcade de disparos de desplazamiento horizontal de 1987 desarrollado y publicado por Taito. Los jugadores controlan una nave 
 	estelar llamada Silver Hawk en su misión de destruir el imperio Belser antes de que acaben con el planeta Darius. Su modo de juego implica atravesar una serie de niveles de desplazamiento mientras destruye enemigos y recolecta mejoras. Se destaca por su exclusiva pantalla panoramica de tres pantallas, una banda sonora animada y graficos influenciados por el anime.</p>
 	<p>El juego fue disenado por un pequeno equipo liderado por Junji Yarita. A diferencia de otros juegos similares, que presentan enemigos mecanicos o 
@@ -61,6 +61,8 @@
 	desarrollo usara 11 de ellos en el juego final.[7] Un solo jefe tardo aproximadamente diez días en crearse. Algunos de los disenos no utilizados 
 	llegaron al material promocional del juego, que se atribuyo a que el arte se subcontrato a otra empresa.</p>
 	
+	<img src="images/darius-cabinet.jpg" alt="Maquina arcade de Darius" id="cabinet">
+	
 	<p>El gabinete arcade, disenado por Natsuki Hirosawa, usa tres monitores individuales hechos para parecer uniformes a traves de efectos de espejo.
 	La idea se uso anteriormente en los juegos anteriores de Taito, Wyvern F-O y Super Dead Heat, y se agrego para darle al juego una presentacion mas
 	cinematografica y hacerlo sentir mas unico en comparacion con otros juegos de disparos en el mercado. Tambien hay un conector para auriculares y 
@@ -76,7 +78,28 @@
 	musica se compuso a traves de una combinacion de sintesis FM y muestreo, mientras que parte fue realizada por el grupo de la orquesta sinfonica de 
 	Yokosuka. La cancion "Captain Neo", que se usa en la primera zona del juego, se uso originalmente como el tema principal del anterior juego de arcade 
 	de Taito, Metal Soldier Isaac II, y se uso como pista de marcador de posicion durante su presentacion en ferias comerciales. A Ogura le gusto la 
-	pista por su sentido de "poder abrumador", y decidio mantenerlo en la versión final.</p>
+	pista por su sentido de "poder abrumador", y decidio mantenerlo en la version final.</p>
+	
+	<h2>Lanzamientos</h2>
+	<p>El juego de arcade hizo su debut en la feria Amusement Trades Exhibition International (ATEI) de Londres en enero de 1987. Darius se lanzo 
+	para salas de juegos en Japon en febrero de 1987 y en America del Norte en abril de 1987.</p>
+	
+	<p>NEC Avenue produjo tres puertos PC Engine para el mercado japones en 1990. Super Darius se lanzo para el complemento del sistema CD-ROM el 16 de 
+	marzo, seguido de Darius Plus como una version HuCard de 8 megabits el 21 de septiembre. Darius Plus es la unica HuCard lanzada comercialmente que 
+	tiene soporte mejorado para PC Engine SuperGrafx. Una tercera version, Darius Alpha, se lanzo como un sorteo y se limito a solo 800 copias. Darius 
+	Alpha es una version alternativa de Darius Plus donde el jugador lucha solo contra los jefes. Al igual que Darius Plus, tiene soporte mejorado para 
+	SuperGrafx. Las tres versiones de PC Engine fueron desarrolladas por Bits Laboratory. Durante el mismo año, The Edge desarrollo y publico una version 
+	para computadora domestica del juego titulada Darius + (sin relacion con el puerto PC Engine con un titulo similar) para Amiga, Atari ST y ZX Spectrum 
+	en Europa. En 2002, PCCW porto el juego a Game Boy Advance en Japon como Darius R.</p>
+	
+	<p>En agosto de 2016, se relanzo la version arcade original para PlayStation 4 en Japon y otras PS-Store asiaticas. El port fue realizado por Hamster 
+	Corporation y es parte de Arcade Archives en PlayStation 4. Darius R, una nueva version del primer juego de Darius con algunas melodias diferentes y un 
+	numero menor de etapas, se lanzo para Game Boy Advance en 2002. Si bien nunca se transfirio originalmente a Sega Genesis, una adaptacion del juego de M2 
+	se presenta en la microconsola Sega Genesis Mini. Se lanzo una version ampliada titulada Darius Extra Version para Sega Mega Drive.</p>
+	
+	<h2>Recepcion</h2>
+	<p>En abril de 1987, Game Machine incluyo a Darius como la unidad de arcade vertical mas popular en Japon en ese momento. Se convirtio en el tercer juego 
+	de arcade grande mas taquillero de 1987 en Japon.</p>
 	
 	<h4>Creditos</h4>
 	<p>Gran parte de la informacion aqui expuesta ha sido tomada de <a href=https://en.wikipedia.org/wiki/Darius_(series) target=_blank>Wikipedia</a></p>
