--- a/darius-saga/index.html
+++ b/darius-saga/index.html
@@ -13,7 +13,6 @@
     src: url("font/digital-7.ttf") format("truetype");
 	}
 	</style> 
-	<script>let brokenlink="página en construccion";</script>
   </head>
   <body>
 	<img src="images/portada-saga.jpg" alt="Portada del primer darius" id="logo">
@@ -38,7 +37,7 @@
 	<ul>
 	<li><a href=darius.html title="Darius"> Darius (1987)</a></li>
 	<li><a href=darius-ii.html title="DariusII"> Darius II (1989)</a></li>
-	<li><a title=brokenlink>Darius Gaiden (1994)</a></li>
+	<li><a title="Pagina en construccion">Darius Gaiden (1994)</a></li>
 	<li>G-Darius (1997)</li>
 	<li>Dariusburst Another Chronicle (2010)</li>
 	</ul>
