--- a/malle/index.html
+++ b/malle/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Kitty Pharmacy</title>
+    <title>Huellitas Store</title>
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
