--- a/huellitas-store/index.html
+++ b/huellitas-store/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8">
     <title>Huellitas Store</title>
 	<link href="styles/style.css" rel="stylesheet" type="text/css">
+	
+	<style type="text/css"> 
+
+	@font-face {
+    font-family: "puisi";
+    src: url("font/puisi-adinda.ttf") format("truetype");
+	}
+	</style>
   </head>
   <body>
-<div class=top-panel><button>Productos</button><button>Servicios</button><button>Sobre nosotros</button></div>
+  <img src="images/logo.png" alt="logo de Huellitas Store" id="logo">
+<div><button id="top-button1">Productos</button><button id="top-button2">Servicios</button><button id="top-button3">Sobre nosotros</button></div>
   </body>
 </html>
